# jack-rack

./: .gitignore  AUTHORS  BUGS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.CVS  README.md  THANKS  TODO  WISHLIST  autogen.sh  configure.ac  ecarack  jack-rack.desktop
pixmaps/: Makefile.am  jack-rack-icon.xcf  jack-rack-logo.xcf  jr-cross.xpm  jr-down-arrow.xpm  jr-up-arrow.xpm
pixmaps/.xvpics/: jack-rack-icon.xcf  logo-2.xcf  logo.xcf
po/: ChangeLog  LINGUAS  Makefile.am  Makevars  POTFILES.in  cs.po  de.po  fr.po  ru.po
src/: Makefile.am  callbacks.c  callbacks.h  control_callbacks.c  control_callbacks.h  control_message.h  file.c  file.h  globals.h  jack_rack.c  jack_rack.h  jack_rack_1.0.dtd  jack_rack_1.1.dtd  jack_rack_1.2.dtd  jack_rack_1.3.dtd  lock_free_fifo.c  lock_free_fifo.h  main.c  midi.c  midi.h  midi_control.c  midi_control.h  midi_window.c  midi_window.h  object_file.c  object_file.h  plugin.c  plugin.h  plugin_desc.c  plugin_desc.h  plugin_mgr.c  plugin_mgr.h  plugin_settings.c  plugin_settings.h  plugin_slot.c  plugin_slot.h  plugin_slot_callbacks.c  plugin_slot_callbacks.h  port_controls.c  port_controls.h  (+11 more)
