pkgdata_DATA = \
	jr-cross.png \
	jr-down-arrow.png \
	jr-up-arrow.png \
	jack-rack-logo.png

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = \
	jack-rack-icon.png \
	gnome-mixer-small.png

EXTRA_DIST = \
	jr-cross.png \
	jr-down-arrow.png \
	jr-up-arrow.png \
	jack-rack-logo.png \
	jack-rack-logo.xcf \
	jack-rack-icon.png \
	jack-rack-icon.xcf \
	gnome-mixer-small.png
